# activegraph-longmemeval-sem

./: .replit  pyproject.toml  replit.md  todo.md
activegraph-memory/: .gitignore  LICENSE  README.md  pyproject.toml
activegraph-memory/activegraph_memory/: __init__.py  constants.py  relations.py  settings.py  types.py
activegraph-memory/docs/: activegraph_native_design.md  architecture.md  behavior_model.md  benchmark_plan.md  contradiction_handling.md  evaluation.md  forgetting_and_archival.md  memory_lifecycle.md  numeric_reasoning.md  object_model.md  prompt_model.md  relation_model.md  retrieval_model.md  roadmap.md  temporal_reasoning.md
activegraph-memory/examples/: basic_memory_run.py  contradiction_demo.py  fallback_retrieval_demo.py  fork_memory_policy.py  memory_evaluation_demo.py  numeric_memory_demo.py  procedural_memory_demo.py  temporal_memory_demo.py
activegraph-memory/tests/: conftest.py  test_agentic_retrieval.py  test_answer_with_evidence.py  test_basic_memory_lifecycle.py  test_concept_graph.py  test_contradiction_supersession.py  test_evaluate_memory_usage.py  test_fallback_retrieval.py  test_forget_or_archive_memory.py  test_fork_memory_policy.py  test_memory_consolidation.py  test_no_live_network_in_tests.py  test_numeric_scope.py  test_object_types.py  test_pack_loads.py  test_procedural_memory.py  test_relation_types.py  test_reranker.py  test_retrieval_links_evidence.py  test_retrieval_planning.py  test_temporal_refs.py
longmemeval-harness/: .gitignore  README.md  pyproject.toml
longmemeval-harness/analysis/: _cleanup_pass.py  _hit1_triage.py  blog-post.md  cleanup_tables.py  failures.py  hit1_triage.py  make_figures.py  paper.md  scaffold_slice.py  significance.py
longmemeval-harness/docs/: instrumentation-todo.md  prior-substrate-comparison.md  vnext-hybrid-raw-span.md
longmemeval-harness/longmemeval_harness/: __init__.py  __main__.py  adapter.py  config.py  dataset.py  embedding_cache.py  extraction_cache.py  judge.py  llm.py  manifest.py  (+6 more)
(+67 files in other folders)
