[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "activegraph>=1.0.5.post2",
    "anthropic>=0.105.2",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
]
