[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "activegraph-memory"
version = "0.1.0"
description = "An ActiveGraph-native memory lifecycle pack."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "activegraph-memory contributors"}]
dependencies = [
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
vector = ["numpy>=1.24"]

[project.entry-points."activegraph.packs"]
memory = "activegraph_memory:pack"

[tool.setuptools.packages.find]
where = ["."]
include = ["activegraph_memory*"]

[tool.setuptools.package-data]
activegraph_memory = ["prompts/*.md", "fixtures/*.jsonl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
