[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longmemeval-harness"
version = "0.1.0"
description = "Resumable benchmark harness evaluating the activegraph-memory pack on LongMemEval."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "activegraph>=1.0.5.post2",
    "activegraph-memory>=0.1.0",
    "pydantic>=2.5",
    "openai>=1.40",
    "anthropic>=0.40",
    "requests>=2.32",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["longmemeval_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
